# c_and_cpp_collection

./: .gitignore  CMakeLists.txt  array_1.c  array_2.c  array_3.c  bit_opr.c  class_prac.cpp  extern_1.c  extern_1.h  extern_1_1.cpp  extern_2_1.c  extern_2_2.c  friend_1.cpp  friend_1.hpp  friend_1_1.hpp  func_ptr_1.c  insert-sort.cpp  rand.cpp  struct_1.c  struct_2.c  test1.cpp  test2.cpp  typedef_1.c  union_1.c  vector_train.cpp
test/: CMakeLists.txt  testTests.cpp
